Fixup the sizing so that it works on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 .main-content {
-    max-width: 700px;
+    width: 700px;
     padding: 100px 0 100px 0;
 }
 
 .main-content img {
-    max-width: 700px;
+    width: 700px;
+    margin-bottom: 50px;
 }
 
 .links {
-    max-width: 380px;
     margin-bottom: 50px;
 }
